--- a/index.html
+++ b/index.html
@@ -14,11 +14,26 @@
       color: #333333;
       font-family: sans-serif;
     }
+		h1 {
+			margin-bottom: 0;
+		}
+		h2 {
+			margin-top: 3px;
+		}
+		p {
+			margin: 5px 1em 1em 5px;
+		}
+		#descriptive-text {
+			float: left;
+			width: 25%;
+			height: 700px;
+			overflow: scroll;
+		}
     #map {
       border: 1px solid #dddddd;
       height: 700px;
       margin-bottom: 2rem;
-      background-color: #ffffff;
+      background-color: #dddddd;
     }
 		#ui-slider{
 			width: 130px;
@@ -34,7 +49,13 @@
 
 <body>
 
-	<h1>California population by county, 2000</h1>
+	<h1>A Century of Growth</h1>
+	<h2>population in California, 1900&ndash;2000</h2>
+	<div id="descriptive-text">
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quis dolor enim. Morbi posuere orci et erat feugiat faucibus quis a nunc. Morbi pharetra odio et tellus ultrices, vitae gravida arcu mattis. Vestibulum vitae purus iaculis, pellentesque nisl vitae, tincidunt diam. Vivamus at velit purus. Mauris pretium sapien risus, blandit sollicitudin orci faucibus a. Nullam convallis hendrerit bibendum. Pellentesque ex erat, vulputate ut placerat in, vehicula at diam. Sed nec ex sed tellus placerat bibendum. Morbi sollicitudin dolor vel feugiat viverra. Praesent cursus justo ac lacus condimentum, viverra mattis erat congue. Maecenas venenatis mi sit amet elit vestibulum scelerisque. Maecenas consectetur nibh et libero pulvinar maximus. Duis sed ultrices ipsum. Suspendisse maximus vitae odio eu fermentum. Integer mattis sit amet nisl ac lobortis.</p>
+		<p>Sed blandit gravida commodo. Ut sem orci, semper iaculis dictum et, fermentum in odio. Aliquam at varius elit, non auctor tortor. Vivamus eget diam lacus. Fusce euismod non magna non pulvinar. In nisl turpis, porta a tempus nec, rutrum a orci. Nam libero nisi, dapibus in ex et, venenatis viverra risus. Ut at nunc lectus. In at dolor magna. Sed sollicitudin, enim eget tempor ultrices, tellus odio scelerisque erat, a pretium arcu mi at tortor. Morbi commodo diam eu tempus cursus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque id ex eros. Etiam nec mattis mauris.</p>
+		<p>Integer sed augue lacus. Vestibulum eu interdum nulla. Quisque et lacus mauris. Donec aliquam hendrerit tincidunt. Nam et lectus leo. Aliquam odio lacus, tristique eget imperdiet vel, vulputate ut lectus. Integer leo diam, aliquet non arcu ac, euismod aliquam nunc. Sed vitae quam convallis ligula pretium fermentum. Phasellus at sapien fringilla, ultrices elit gravida, tempor leo. Morbi sed ligula nec ligula venenatis scelerisque. Praesent varius velit urna, et vehicula turpis luctus at. Phasellus non est sit amet mi gravida tincidunt. Mauris eu lorem ut ipsum cursus aliquam.</p>
+	</div>
 	<div id="map"></div>
 	<div id="ui-slider">
 		<label>
@@ -77,7 +98,7 @@
             color: '#ffffff',
             weight: 1,
             fillOpacity: 1,
-            fillColor: '#000000'
+            fillColor: feature.properties["hex"]//'#000000'
           }
         },
         onEachFeature: function(feature, layer) {
