--- a/index.html
+++ b/index.html
@@ -33,8 +33,17 @@
       border: 1px solid #dddddd;
       height: 700px;
       margin-bottom: 2rem;
-      background-color: #dddddd;
-    }
+			background-color: #dddddd;
+			position: relative;
+		}
+		#inset-map {
+			position: absolute;
+			width: 220px;
+			height: 220px;
+			left: 18px;
+			bottom: 18px;
+			background: white;
+		}
 		#ui-slider{
 			width: 130px;
 		}
@@ -56,7 +65,9 @@
 		<p>Sed blandit gravida commodo. Ut sem orci, semper iaculis dictum et, fermentum in odio. Aliquam at varius elit, non auctor tortor. Vivamus eget diam lacus. Fusce euismod non magna non pulvinar. In nisl turpis, porta a tempus nec, rutrum a orci. Nam libero nisi, dapibus in ex et, venenatis viverra risus. Ut at nunc lectus. In at dolor magna. Sed sollicitudin, enim eget tempor ultrices, tellus odio scelerisque erat, a pretium arcu mi at tortor. Morbi commodo diam eu tempus cursus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque id ex eros. Etiam nec mattis mauris.</p>
 		<p>Integer sed augue lacus. Vestibulum eu interdum nulla. Quisque et lacus mauris. Donec aliquam hendrerit tincidunt. Nam et lectus leo. Aliquam odio lacus, tristique eget imperdiet vel, vulputate ut lectus. Integer leo diam, aliquet non arcu ac, euismod aliquam nunc. Sed vitae quam convallis ligula pretium fermentum. Phasellus at sapien fringilla, ultrices elit gravida, tempor leo. Morbi sed ligula nec ligula venenatis scelerisque. Praesent varius velit urna, et vehicula turpis luctus at. Phasellus non est sit amet mi gravida tincidunt. Mauris eu lorem ut ipsum cursus aliquam.</p>
 	</div>
-	<div id="map"></div>
+	<div id="map">
+		<div id="inset-map"></div>
+	</div>
 	<!-- <div id="ui-slider">
 		<label>
 			<span class="min">1900</span>
@@ -89,21 +100,49 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/1.3.5/chroma.min.js"></script>
 
 	<script>
+
+
 		var options = {
 			scrollWheelZoom: true,
 			zoomSnap: .2,
 			dragging: true,
 			zoomControl: true,
 			center: [40, -127],
-			zoom: 5
+			zoom: 5,
+			minZoom: 5,
+			maxZoom: 7
+			
 		}
 
 		var map = L.map('map', options);//.setView([41.505, -116.09], 5);
 
+
+
+		var insetMap = L.map('inset-map', {
+			center: [0,0],
+			zoom: 5,
+			zoomControl: false,
+			attribution: false
+			// pan false
+		})
+
+		L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+			maxZoom: 19,
+			attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+		}).addTo(insetMap)
+
+		map.on("zoomend", function() {
+			var currentZoomLevel = map.getZoom()
+			insetMap.setZoom(currentZoomLevel)
+		})
+
+		// deferred requests for data
 		var data2000 = $.getJSON("data/ca_cartogram_2000.json"),
 				data1940 = $.getJSON("data/ca_cartogram_1940.json"),
-				data1920 = $.getJSON("data/ca_cartogram_1920.json");
+				data1920 = $.getJSON("data/ca_cartogram_1920.json")
+				// legendData = $.getJSON("data/legend_cartogram.json")
 
+		// map
 		var layerMap = {
 			1920: data1920,
 			1940: data1940,
@@ -114,8 +153,16 @@
 
 		function ready(data2000, data1940, data1920) {
 
+			// drawLegend(legendGeoJson)
+
 			drawCartogram(data2000)
 			buildUI(data2000, data1940, data1920)
+
+		}
+
+		function drawLegend(data) {
+
+			L.geoJson(data).addTo(insetMap)
 
 		}
 
@@ -147,7 +194,7 @@
               weight: 1
             });
           });
-          var tooltipInfo = layer.feature.properties["name"] + " County<br />pop: " + layer.feature.properties["population"];
+          var tooltipInfo = layer.feature.properties["name"] + " County<br />pop: " + layer.feature.properties["population"].toLocaleString();
           layer.bindTooltip(tooltipInfo, {
             sticky: true,
             tooltipAnchor: [200, 200]
